Fix word-wrap

--- a/web/src/components/Common/Note/Note.scss
+++ b/web/src/components/Common/Note/Note.scss
@@ -58,11 +58,6 @@
   padding: rem(12px) rem(16px);
 }
 
-.content {
-  word-wrap: break-word;
-  word-break: break-all;
-}
-
 .collapsed-content {
   color: $light-gray;
 }
